src/objects/Unit__c.object
<CustomObject>
    <fields>
        <fullName>GIS_Unit_ID__c</fullName>
        <label>GIS Unit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Unit_Name__c</fullName>
        <label>GIS Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Acres__c</fullName>
        <label>Gross Acres Estimate</label>
        <precision>18</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRP_Unit_Name__c</fullName>
        <label>SRP Unit Name</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Horizontal</fullName>
                </value>
                <value>
                    <fullName>Vertical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>length__c</fullName>
        <label>Length (ft)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>&quot;/&quot;&amp;Id</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>width__c</fullName>
        <label>Width (ft)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Unit_Type__c</columns>
        <columns>NAME</columns>
        <columns>GIS_Unit_ID__c</columns>
        <columns>Gross_Acres__c</columns>
        <columns>Operator__c</columns>
        <columns>SRP_Unit_Name__c</columns>
        <columns>GIS_Unit_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_GIS_Unit_filter</fullName>
        <columns>Unit_Type__c</columns>
        <columns>NAME</columns>
        <columns>GIS_Unit_ID__c</columns>
        <columns>Gross_Acres__c</columns>
        <columns>Operator__c</columns>
        <columns>SRP_Unit_Name__c</columns>
        <columns>GIS_Unit_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GIS_Unit_ID__c</field>
            <operation>equals</operation>
            <value>20663</value>
        </filters>
        <label>All - GIS Unit filter</label>
    </listViews>
    <nameField>
        <displayFormat>U-{0000000000}</displayFormat>
        <label>Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>